홈화면개선

--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -40,14 +40,14 @@
             alt="image button"
           >
         </button>
-
         <script>
-          function handleButtonClick(){
-            asdf
-            console.log("할인 이벤트를 확인해보세요")
+          function handleButtonClick() {
+            // 버튼 클릭 시 다른 페이지로 리다이렉션
+            window.location.href = '/other-page'; // 다른 페이지의 경로로 변경
           }
         </script>
       </div>
+
     </div>
     
     <% if (!search) { %>
